Fix: products table add to cart 1px shift

--- a/bootb2b/compass/sass/bootb2b.sass
+++ b/bootb2b/compass/sass/bootb2b.sass
@@ -49,7 +49,6 @@
   th.views-field-add-to-cart-form
     text-align: right
   th.views-field-add-to-standard-order
-    border: 0 !important
     text-align: center
   td.views-field-sku
     width: 60px
@@ -80,6 +79,8 @@
         text-align: right
       .ajax-progress
         display: none
+  .views-field-add-to-cart-form
+    float: none
   td.views-field-add-to-standard-order
     text-align: right
     width: 56px
